# openplc_rte

./: functional_ip.ini  redundancy_role.ini  redundancy_role.json  requirements.txt  sys_prepare.sh
core/src/: CMakeLists.txt
core/src/drivers/: plugin_driver.c  plugin_driver.h
core/src/plc_app/: image_snapshot.c  image_snapshot.h  plc_main.c  redundancy_ipc.c  redundancy_ipc.h  unix_socket.c
webserver/: app.py  plcapp_management.py  redundancy_program_sync.py  redundancy_role_config.py  runtimemanager.py  unixclient.py
